# telemetry-rust

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  renovate.json  rustfmt.toml
.github/: CODEOWNERS
.github/instructions/: aws-fluent-builder.instructions.md  aws-fluent-builder.md  general.instructions.md
.github/prompts/: add-aws-service.prompt.md  update-fluent-builder.prompt.md  verify-aws-coverage.prompt.md
.github/workflows/: ci.yml  monthly.yml  release.yml
src/: filter.rs  fmt.rs  future.rs  http.rs  jaeger.rs  lib.rs  otlp.rs  propagation.rs  semconv.rs  util.rs
src/instrumentations/: mod.rs
src/instrumentations/http/: client.rs  hyper.rs  mod.rs  reqwest.rs  test_utils.rs
src/instrumentations/http/hyper/: legacy_client.rs  mod.rs  test_utils.rs
src/middleware/: aws.rs  axum.rs  lambda.rs  mod.rs
src/middleware/aws/: instrumentation.rs  mod.rs
src/middleware/aws/instrumentation/: future.rs  mod.rs  stream.rs
src/middleware/aws/instrumentation/fluent_builder/: appconfigdata.rs  dynamodb.rs  firehose.rs  mod.rs  s3.rs  s3_new.rs  sagemaker_runtime.rs  secrets_manager.rs  secretsmanager.rs  sns.rs  sqs.rs  ssm.rs  utils.rs
src/middleware/aws/instrumentation/fluent_builder/utils/: attributes.rs  mod.rs  partiql.rs
src/middleware/aws/operation/: dynamodb.rs  firehose.rs  mod.rs  sns.rs
src/middleware/aws/operations/: appconfigdata.rs  dynamodb.rs  firehose.rs  mod.rs  s3.rs  sagemaker_runtime.rs  secrets_manager.rs  secretsmanager.rs  sns.rs  sqs.rs  ssm.rs
src/middleware/http/: client.rs  mod.rs  reqwest.rs
src/middleware/lambda/: context.rs  layer.rs  mod.rs
src/test/: jaegar.rs  mod.rs
telemetry-rust/: Cargo.toml
