[package]
name = "telemetry-rust"
version = "6.3.1"
edition = "2024"
license = "MIT"
description = "Open Telemetry fox Axum and Tracing"
repository = "https://github.com/nentgroup/telemetry-rust"

[dependencies]
http = "1.1.0"
opentelemetry = { version = "0.31", default-features = false, features = [
  "trace",
] }
tracing-opentelemetry = "0.32"
opentelemetry-http = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "grpc-tonic"] }
opentelemetry-zipkin = { version = "0.31", features = [], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
  "rt-tokio",
] }
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }
tracing-opentelemetry-instrumentation-sdk = { version = "0.32", features = ["http"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
  "ansi"
] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tracing-serde = "0.2.0"
opentelemetry_api = { version = "0.20.0", features = ["testing"], optional = true }
rand = { version = "0.9.0", optional = true }
tower = { version = "0.5", optional = true }
bytes = { version = "1.10.1", optional = true }
pin-project-lite = { version = "0.2", optional = true }
futures-util = { version = "0.3", default-features = false, features = [], optional = true }
hyper = { package = "hyper", version = "1.3", default-features = false, optional = true }
http-body-util = { version = "0.1.1", optional = true }
aws-types = { version = "1", optional = true }
aws-smithy-async = { version = "1.2.5", optional = true }
aws-smithy-types-convert = { version = "0.60.9", features = ["convert-streams"], optional = true }
aws-sdk-dynamodb = { version = "1.86.0", optional = true }
aws-sdk-firehose = { version = "1.86.0", optional = true }
aws-sdk-sns = { version = "1.79.0", optional = true }
aws-sdk-sqs = { version = "1.78.0", optional = true }
lambda_runtime = { version = "0", optional = true }
paste = { version = "1.0.14", optional = true }
opentelemetry-aws = { version = "0.19", optional = true }
thiserror = "2.0.12"

[dev-dependencies]
axum = "0.8.0"
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
assert2 = "0.3"
rstest = "0.26"
tokio = "1.41"

[features]
full = ["aws-full", "axum", "test"]
default = ["zipkin"]
zipkin = ["dep:opentelemetry-zipkin"]
xray = ["dep:opentelemetry-aws"]
future = ["dep:pin-project-lite"]
test = ["dep:bytes", "dep:opentelemetry_api", "dep:rand", "dep:http-body-util", "dep:hyper"]
axum = ["dep:tower", "dep:futures-util", "dep:pin-project-lite"]
aws-span = ["dep:aws-types", "dep:paste"]
aws-instrumentation = ["aws-span", "future"]
aws-stream-instrumentation = ["aws-span", "dep:pin-project-lite", "dep:aws-smithy-async", "dep:aws-smithy-types-convert", "dep:futures-util"]
aws-fluent-builder-instrumentation = ["aws-instrumentation", "dep:paste"]
aws-lambda = ["dep:tower", "dep:lambda_runtime", "future"]
aws-dynamodb = ["aws-fluent-builder-instrumentation", "dep:aws-sdk-dynamodb"]
aws-firehose = ["aws-fluent-builder-instrumentation", "dep:aws-sdk-firehose"]
aws-sns = ["aws-fluent-builder-instrumentation", "dep:aws-sdk-sns"]
aws-sqs = ["aws-fluent-builder-instrumentation", "dep:aws-sdk-sqs"]
aws = ["aws-span", "aws-instrumentation", "aws-stream-instrumentation"]
aws-full = ["aws", "xray", "aws-lambda", "aws-dynamodb", "aws-firehose", "aws-sns", "aws-sqs"]

[package.metadata.release]
allow-branch = ["main"]
publish = false

[package.metadata.docs.rs]
all-features = true

[profile.dev]
lto = false
split-debuginfo = "unpacked"
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = 's'
incremental = false
lto = true
# The Rust compiler splits your crate into multiple codegen units to parallelize (and thus speed up) compilation. However, this might cause it to miss some potential optimizations.
codegen-units = 1
